--- a/package.json
+++ b/package.json
@@ -2,31 +2,32 @@
   "name": "parser",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "parse.js",
   "dependencies": {
     "anymatch": "^3.1.1",
     "cheerio": "^1.0.0-rc.3",
+    "cli-table": "^0.3.1",
     "clone-response": "^1.0.2",
     "decompress-response": "^3.3.0",
-    "cli-table": "^0.3.1",
     "fs": "^0.0.1-security",
     "make-dir": "^3.1.0",
     "mimic-response": "^1.0.1",
+    "minimist": "^1.2.5",
     "ms": "^2.1.2",
-    "normalize-path": "^3.0.0",
     "nodemon": "^2.0.3",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.0",
     "p-cancelable": "^1.1.0",
+    "picomatch": "^2.2.2",
     "prepend-http": "^2.0.0",
     "pupa": "^2.0.1",
-    "picomatch": "^2.2.2",
+    "puppeteer": "^3.0.2",
     "readdirp": "^3.4.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
-    "minimist": "^1.2.5",
-    "semver-diff": "^3.1.1",
     "responselike": "^1.0.2",
-    "normalize-url": "^4.5.0",
-    "nopt": "^1.0.10"
+    "semver-diff": "^3.1.1"
   },
   "devDependencies": {},
   "scripts": {
