--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "app.js",
   "dependencies": {
     "anymatch": "^3.1.1",
-    "cheerio": "^1.0.0-rc.3",
     "cli-table": "^0.3.1",
     "clone-response": "^1.0.2",
     "decompress-response": "^3.3.0",
+    "ejs": "^3.1.2",
+    "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "http": "0.0.1-security",
     "make-dir": "^3.1.0",
     "mimic-response": "^1.0.1",
     "minimist": "^1.2.5",
@@ -27,11 +29,12 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "responselike": "^1.0.2",
-    "semver-diff": "^3.1.1"
+    "semver-diff": "^3.1.1",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
